--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.48",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "bootstrap": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
